# monad-staking-indexer

./: .gitignore  Cargo.toml  README.md  config.toml.example  docker-compose.yml  env.example
migrations/: 00_init_database.psql  20250101000001_create_delegate_events.sql  20250101000002_create_undelegate_events.sql  20250101000003_create_withdraw_events.sql  20250101000004_create_claim_rewards_events.sql  20250101000005_create_validator_rewarded_events.sql  20250101000006_create_epoch_changed_events.sql  20250101000007_create_validator_created_events.sql  20250101000008_create_validator_status_changed_events.sql  20250101000009_create_commission_changed_events.sql  20250101000010_create_blocks_table.sql
src/: config.rs  contract_abi.rs  error.rs  events.rs  lib.rs  main.rs  metrics.rs  pg_utils.rs  provider.rs  test_utils.rs
src/db/: mod.rs  repository.rs  repository_batch.rs
tests/: database.rs  db_inserts.rs
