[package]
name = "monad-staking-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.8", features = ["full"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
futures-util = "0.3"
hex = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "bigdecimal"] }
bigdecimal = "0.4"
