[package]
name = "monad-staking-indexer"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
alloy = { version = "0.8", features = ["full"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
eyre = "0.6"
futures-util = "0.3"
hex = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "bigdecimal"] }
bigdecimal = "0.4"
log = "0.4"
env_logger = "0.11"
strum = "0.26"
strum_macros = "0.26"
thiserror = "2.0"
axum = "0.7"
tower = "0.5"
scopeguard = "1.2"
tempfile = "3.14"
serde = { version = "1.0", features = ["derive"] }
config = "0.14"
toml = "0.8"
